# SP_Lab_3

./: .gitmodules  CMakeLists.txt
src/: main.cpp
src/classes/App/: App.cpp
src/classes/Dialog/: Dialog.cpp
src/classes/FontDialog/: FontDialog.cpp
src/classes/ResizeDialog/: ResizeDialog.cpp  ResizeDialog.hpp
src/classes/Table/: Table.cpp
src/classes/Text/: Text.cpp
